--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,4 @@
 github: ysfchn
-custom: ["https://buymeacoffee.com/ysfchn"]
+buy_me_a_coffee: ysfchn
+patreon: ysfchn
+custom: ["https://ysfchn.com/links/#donation"]
